SessionAffinity_Example/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
  - "*" # Copy the value in the Gateway hosts
  gateways:
    - helloworld-gw # Gateway Name
  http:
  - route:
    - destination:
        host: helloworld # The Service DNS name
        subset: all-helloworld-pods  # The name defined in the DestinationRule
      # Weight: 100 not needed if there is only one
